test/cherry/Language/tensor_struct_lowering_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

struct Params {
  weights: Float32[2]
}

fn main(): UInt64 {
  0
}

# CHECK: error: struct fields containing Tensor require struct tensor storage ABI
